--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Airdrop tooling for Koinos ERC-20 Mining",
   "main": "app.js",
   "dependencies": {
+    "commander": "^6.1.0",
     "web3": "^1.2.11"
   },
   "devDependencies": {},
